# vut-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/moodle/: lecture-03-convolutions-weights-normalization.md  lecture-07-learning-similarity-semantic-embeddings.md
notifier/macos/: Info.plist  VUTStudisNotifier.swift
raycast/: vut-today.sh
raycast-extension/: package-lock.json  package.json  pnpm-lock.yaml  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: course-detail.tsx  studis.ts  use-studis-data.ts  vut-changes.tsx  vut-check-now.tsx  vut-grades.tsx  vut-open-course.tsx  vut-today.tsx
scripts/: build-macos-notifier.sh  install-macos-notifier.sh
src/vut_mcp/: __init__.py  agenda.py  context.py  models.py  payloads.py  server.py
src/vut_moodle/: __init__.py  api.py  auth.py  client.py  errors.py  models.py  (+3 more)
tests/: test_agenda.py  test_agenda_models.py  test_assessment_dashboard.py  test_assessment_dashboard_client.py  test_assessment_messages.py  test_assessments_parser.py  test_assignments_parser.py  test_auth.py  test_cache.py  test_change_detection.py  test_client_auth_retry.py  test_course_links.py  test_course_updates_client.py  test_course_updates_parser.py  test_courses.py  test_daily_briefing.py  test_grades_parser.py  test_imports.py  test_mcp_context.py  test_mcp_payloads.py  test_moodle_client.py  test_moodle_extraction.py  test_moodle_parsers.py  test_moodle_transport.py  test_notifications.py  test_pending_actions.py  test_recent_changes.py  test_schedule_client.py  test_schedule_parser.py  test_terms_parser.py
(+34 files in other folders)
